--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     }
   },
   "dependencies": {
-    "firebase-admin": "^4.2.0"
+    "firebase-admin": "^4.2.0",
+    "require-dir": "^0.3.1",
+    "rpi-gpio": "^0.8.1"
   }
 }
