--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
   },
   "dependencies": {
     "firebase-admin": "^4.2.0",
-    "require-dir": "^0.3.1",
-    "rpi-gpio": "^0.8.1"
+    "require-dir": "^0.3.1"
   }
 }
