--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "request": "^2.81.0",
     "request-promise": "^4.2.0",
     "require-dir": "^0.3.1"
+  },
+  "optionalDependencies" : {
+    "rpi-gpio" : "^0.8.1"
   }
 }
