--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "eslint . --ext .js",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "watch" : "nodemon app/main.js"
   },
   "repository": {
     "type": "git",
@@ -19,11 +20,15 @@
   "homepage": "https://github.com/SantiMA10/HomePi#readme",
   "devDependencies": {
     "cz-conventional-changelog": "^2.0.0",
+    "del": "^2.2.2",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "semantic-release": "^6.3.2"
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^3.1.7",
+    "semantic-release": "^6.3.2",
+    "typescript": "^2.3.4"
   },
   "config": {
     "commitizen": {
@@ -31,12 +36,13 @@
     }
   },
   "dependencies": {
+    "@types/request-promise": "^4.1.33",
     "firebase-admin": "^4.2.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.0",
     "require-dir": "^0.3.1"
   },
-  "optionalDependencies" : {
-    "rpio" : "^0.9.16"
+  "optionalDependencies": {
+    "rpio": "^0.9.16"
   }
 }
