--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
   },
   "dependencies": {
     "@types/bluebird": "^3.5.5",
+    "@types/node-gcm": "^0.14.29",
     "@types/request-promise": "^4.1.33",
     "bluebird": "^3.5.0",
     "firebase-admin": "^5.0.0",
+    "node-gcm": "^0.14.6",
     "request": "^2.81.0",
     "request-promise": "^4.2.0"
   }
