--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "HomePi is my final degree project on University of Oviedo, my idea is build a easy to expand home automation system.",
   "main": "server.js",
   "scripts": {
-    "test": "mocha \"test/**/*.js\" --require ts-node/register --ui bdd",
+    "test": "mocha \"test/**/*.ts\" --require ts-node/register --ui bdd",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "watch": "nodemon app/main.js"
   },
