--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,8 @@ after_success:
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
+install:
+  - npm install -g codecov
+script:
+  - istanbul cover ./node_modules/mocha/bin/_mocha --reporter lcovonly -- -R spec
+  - codecov
