--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "HomePi is my final degree project on University of Oviedo, my idea is build a easy to expand home automation system.",
   "main": "app/main.js",
   "scripts": {
+    "doc" : "gulp doc",
     "test": "mocha \"test/**/*.ts\" --require ts-node/register --ui bdd",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "watch": "nodemon app/main.js",
@@ -29,11 +30,13 @@
     "del": "^2.2.2",
     "firebase-server": "^0.10.1",
     "gulp": "^3.9.1",
+    "gulp-typedoc": "^2.0.2",
     "gulp-typescript": "^3.1.7",
     "mocha": "^3.4.2",
     "semantic-release": "^6.3.2",
-    "tsd": "^0.6.5",
     "ts-node": "^3.0.6",
+    "tsd": "^0.6.5",
+    "typedoc": "^0.7.1",
     "typescript": "^2.3.4"
   },
   "config": {
